Implement black-box test cases of MutableTree<N>